--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
 
                     <div class="p-4 bg-gunmetal-600 rounded-lg border-l-4 border-almond-500 shadow-md transition duration-200 hover:shadow-lg">
-                        <span class="inline-block px-3 py-1 text-xs font-semibold rounded-full m-0.5 shadow-sm bg-almond-500 text-black-500">Hito 3: Integración Full Stack (FINAL)</span>
+                        <span class="inline-block px-3 py-1 text-xs font-semibold rounded-full m-0.5 shadow-sm bg-almond-500 text-black-500">Hito 3: Integración Full Stack</span>
                         <h5 class="text-xl font-bold text-almond-500 mt-2 mb-1">Plataforma Web Django con Autenticación y Autonomía</h5>
                         
                         <p class="text-gray-300 text-base mt-2 mb-2">
