--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <h5 class="text-xl font-bold text-almond-500 mt-2 mb-1">Plataforma Web Django con Autenticación y Autonomía</h5>
                         
                         <p class="text-gray-300 text-base mt-2 mb-2">
-                            <span class="font-semibold text-gray-100">Énfasis:</span> Integración final <strong>Django/MySQL</strong> con el motor de cálculo. Implementación de <strong>ORM</strong>, $\text{CRUD}$ de $\text{8 tablas}$ y un robusto sistema de <strong>Autenticación/Roles</strong>.
+                            <span class="font-semibold text-gray-100">Énfasis:</span> Integración final <strong>Django/MySQL</strong> con el motor de cálculo. Implementación de <strong>ORM</strong>, CRUD  que interacciona con 8 tablas y un robusto sistema de <strong>Autenticación/Roles</strong>.
                         </p>
                         
                         <p class="text-lg text-gray-300 mb-6"><strong>Tecnologías:</strong> Django | ORM | HTML/CSS | Seguridad</p>
