Modificación en el Mensaje de Introducción

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Ingeniero Civil Químico ⚗️ | <span class="text-almond-500 font-semibold">Desarrollador Full Stack Python/Django</span>
             </h2>
             <p class="max-w-3xl mx-auto text-lg md:text-xl text-almond-500/70 font-light leading-relaxed">
-                Soy un híbrido profesional apasionado por construir las herramientas para la industria. Mi rol es actuar como el <span class="text-almond-500 font-semibold italic">"traductor"</span> entre los requerimientos técnicos de la ingeniería y un código robusto y escalable.
+                Soy un profesional híbrido especializado en construir herramientas digitales para la industria. Mi rol como <span class="text-almond-500 font-semibold italic">"traductor"</span> entre la ingeniería química y el desarrollo de software me permite entender requerimientos técnicos complejos y convertirlos en código de alto impacto bajo Python/Django, garantizando soluciones robustas y escalables para los retos del sector.
             </p>
             <div class="mt-12 flex flex-col md:flex-row justify-center items-center gap-6">
                 <a href="#proyectos" class="group relative px-10 py-4 bg-primary-color text-black font-black rounded-full overflow-hidden transition-all hover:pr-12">
@@ -128,7 +128,6 @@
                     <h4 class="text-3xl md:text-4xl font-black text-khaki-500 tracking-tight group-hover:text-almond-500 transition-colors">
                         Aplicación Web "Gestor Químico"
                     </h4>
-                    <span class="text-xs font-mono text-khaki-500/50 mt-2 md:mt-0 uppercase tracking-widest italic">Fullstack Case Study</span>
                 </div>
                 
                 <p class="text-xl text-gray-300 mb-10 leading-relaxed font-light border-l-4 border-khaki-500 pl-6">
